{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 207,
  "lineage": "c6cc8f3f-054a-9f3c-7f15-445af9612db3",
  "resources": [
    {
      "module": "module.tsdb-sentinel",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "influxdb_igw",
      "provider": "module.tsdb-sentinel.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251622686387:internet-gateway/igw-06cc23655147943ea",
            "id": "igw-06cc23655147943ea",
            "owner_id": "251622686387",
            "tags": {
              "Name": "influxdb-igw"
            },
            "tags_all": {
              "Name": "influxdb-igw"
            },
            "vpc_id": "vpc-0caa4222238cf29e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tsdb-sentinel.aws_vpc.influxdb_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tsdb-sentinel",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "influxdb_public_rt",
      "provider": "module.tsdb-sentinel.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251622686387:route-table/rtb-085f379994dc3c419",
            "id": "rtb-085f379994dc3c419",
            "owner_id": "251622686387",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06cc23655147943ea",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "influxdb-public-rt"
            },
            "tags_all": {
              "Name": "influxdb-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caa4222238cf29e9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.tsdb-sentinel.aws_internet_gateway.influxdb_igw",
            "module.tsdb-sentinel.aws_vpc.influxdb_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tsdb-sentinel",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "module.tsdb-sentinel.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ac1cf24e1c7da0b",
            "route_table_id": "rtb-085f379994dc3c419",
            "subnet_id": "subnet-06052a340519cf8d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tsdb-sentinel.aws_internet_gateway.influxdb_igw",
            "module.tsdb-sentinel.aws_route_table.influxdb_public_rt",
            "module.tsdb-sentinel.aws_subnet.influxdb_public_subnet_1",
            "module.tsdb-sentinel.aws_vpc.influxdb_vpc",
            "module.tsdb-sentinel.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.tsdb-sentinel",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_association",
      "provider": "module.tsdb-sentinel.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036bb099685225c74",
            "route_table_id": "rtb-085f379994dc3c419",
            "subnet_id": "subnet-0816bf74c2dee2394"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tsdb-sentinel.aws_internet_gateway.influxdb_igw",
            "module.tsdb-sentinel.aws_route_table.influxdb_public_rt",
            "module.tsdb-sentinel.aws_subnet.influxdb_public_subnet_2",
            "module.tsdb-sentinel.aws_vpc.influxdb_vpc",
            "module.tsdb-sentinel.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.tsdb-sentinel",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "influxdb_sg",
      "provider": "module.tsdb-sentinel.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251622686387:security-group/sg-0d318c6e59e7e8396",
            "description": "Security group para InfluxDB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d318c6e59e7e8396",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8086,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8086
              }
            ],
            "name": "influxdb-security-group",
            "name_prefix": "",
            "owner_id": "251622686387",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "influxdb-sg"
            },
            "tags_all": {
              "Name": "influxdb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caa4222238cf29e9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.tsdb-sentinel.aws_vpc.influxdb_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tsdb-sentinel",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "influxdb_public_subnet_1",
      "provider": "module.tsdb-sentinel.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251622686387:subnet/subnet-06052a340519cf8d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06052a340519cf8d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "251622686387",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "influxdb-public-subnet-1"
            },
            "tags_all": {
              "Name": "influxdb-public-subnet-1"
            },
            "vpc_id": "vpc-0caa4222238cf29e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tsdb-sentinel.aws_vpc.influxdb_vpc",
            "module.tsdb-sentinel.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.tsdb-sentinel",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "influxdb_public_subnet_2",
      "provider": "module.tsdb-sentinel.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251622686387:subnet/subnet-0816bf74c2dee2394",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0816bf74c2dee2394",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "251622686387",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "influxdb-public-subnet-2"
            },
            "tags_all": {
              "Name": "influxdb-public-subnet-2"
            },
            "vpc_id": "vpc-0caa4222238cf29e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tsdb-sentinel.aws_vpc.influxdb_vpc",
            "module.tsdb-sentinel.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.tsdb-sentinel",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "influxdb_vpc",
      "provider": "module.tsdb-sentinel.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251622686387:vpc/vpc-0caa4222238cf29e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b25c84764e2e4504",
            "default_route_table_id": "rtb-0aa7ecec68df5910f",
            "default_security_group_id": "sg-059284f47e08129f9",
            "dhcp_options_id": "dopt-005b443c7f8e10f5f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0caa4222238cf29e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa7ecec68df5910f",
            "owner_id": "251622686387",
            "tags": {
              "Name": "influxdb-vpc"
            },
            "tags_all": {
              "Name": "influxdb-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vm-sentinel",
      "mode": "managed",
      "type": "aws_eip",
      "name": "sentinel_eip",
      "provider": "module.vm-sentinel.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0093f0e13909096c1",
            "arn": "arn:aws:ec2:us-east-1:251622686387:elastic-ip/eipalloc-0093f0e13909096c1",
            "association_id": "eipassoc-088cc7364ab6676c5",
            "domain": "vpc",
            "id": "eipalloc-0093f0e13909096c1",
            "instance": "i-08306dd3f462b9333",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02fc8c34b82858c80",
            "private_dns": "ip-172-31-92-112.ec2.internal",
            "private_ip": "172.31.92.112",
            "public_dns": "ec2-18-213-131-17.compute-1.amazonaws.com",
            "public_ip": "18.213.131.17",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sentinel-eip"
            },
            "tags_all": {
              "Name": "sentinel-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vm-sentinel.aws_instance.sentinel",
            "module.vm-sentinel.aws_key_pair.sentinel_ec2_key_pair",
            "module.vm-sentinel.aws_security_group.docker_sg",
            "module.vm-sentinel.data.aws_ami.ubuntu_22_04"
          ]
        }
      ]
    },
    {
      "module": "module.vm-sentinel",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sentinel",
      "provider": "module.vm-sentinel.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00de3875b03809ec5",
            "arn": "arn:aws:ec2:us-east-1:251622686387:instance/i-08306dd3f462b9333",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08306dd3f462b9333",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02fc8c34b82858c80",
            "private_dns": "ip-172-31-92-112.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.92.112",
            "public_dns": "ec2-18-213-131-17.compute-1.amazonaws.com",
            "public_ip": "18.213.131.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-098c462103f5ba88a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "docker-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3152d9e4874ca1b",
            "tags": {
              "Name": "SentinelInstance"
            },
            "tags_all": {
              "Name": "SentinelInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f85c8994070a2342"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vm-sentinel.aws_key_pair.sentinel_ec2_key_pair",
            "module.vm-sentinel.aws_security_group.docker_sg",
            "module.vm-sentinel.data.aws_ami.ubuntu_22_04"
          ]
        }
      ]
    },
    {
      "module": "module.vm-sentinel",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docker_sg",
      "provider": "module.vm-sentinel.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:251622686387:security-group/sg-0f85c8994070a2342",
            "description": "Security group para permitir SSH y HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f85c8994070a2342",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "docker-sg",
            "name_prefix": "",
            "owner_id": "251622686387",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08a6730f0ef1a1207"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}